--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
     --fs-800: 2.5rem;
     --fs-900: 3.5rem;
 
-    --fs-clock: 7rem;
+    --fs-clock: 5rem;
     --fs-body: var(--fs-400);
     --fs-primary-heading: var(--fs-900);
     --fs-secondary-heading: var(--fs-700);
@@ -116,10 +116,10 @@ html:focus-within {
 
 /* Set core body defaults */
 body {
-    min-height: 100vh;
-    min-width: 100vw;
+    height: 100vh;
+    width: 100vw;
     text-rendering: optimizeSpeed;
-    line-height: 1.5;
+    line-height: 1;
     font-family: var(--ff-body);
     color: white;
     overflow: hidden;
@@ -260,12 +260,7 @@ label {
 .button-container {
     display: flex;
     justify-content: space-between;
-}
-.clock-container {
-    display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
-    grid-template-rows: auto;
-    width: 100%;
+    height: 100px;
 }
 .todo-main-container {
     max-width: 80%;
@@ -286,9 +281,9 @@ label {
 
 /* section */
 section {
-    height: 90vh;
-    min-width: 100vw;
-    position: absolute;
+    height: 100%;
+    width: 100%;
+    position: fixed;
     opacity: 0;
     pointer-events: none;
     display: flex;
@@ -300,17 +295,86 @@ section {
     opacity: 1;
     transition: opacity 0.5s ease-in-out;
 }
+    /* section 4 */
+    #section4 {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
 
 /* footer */
 footer {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    align-items: center;
+}
+.widget-button {
+    opacity: 50%;
+    display: block;
+    background: none;
+    border: none;
+    color: white;
+    cursor: pointer;
+    padding: 0;
+    padding-right: 30px;
+    margin: 0;
+}
+
+.widget-button:hover {
+    opacity: 100%;
+    transition: opacity .2s ease-in-out;
+}
+.todo-button-container {
+    width: 100%;
     display: flex;
-    position: fixed;
-    bottom: 0;
+    justify-content: flex-end;
+}
+/* quotes */
+footer blockquote {
+    margin: 0;
+    padding: 0;
+    padding: 10px;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0;
+    margin-inline-end: 0;
+    font-size: var(--fs-400);
+    line-height: 1.25;
+    text-align: center;
+    width: auto;
+}
+.blockquote {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 40px;
     flex-direction: column;
-    place-items: center;
-    width: 100vw;
+}
+.quote,
+.author {
+    text-align: center;
+}
+.quote {
+    opacity: 70%;
+    max-width: 35ch;
+}
+.author {
+    opacity: 0%;
+}
+.shifted {
+    margin-right: 10px;
 }
 /* clock */
+.clock-container {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-rows: auto;
+    width: 100%;
+    max-width: 700px;
+}
 .clock {
     grid-column: 2;
     text-align: center;
@@ -333,11 +397,7 @@ footer {
     opacity: 1;
     transform: scale(1.5);
 }
-@media (max-width: 420px) {
-    .clock-button {
-        width: 100%;
-    }
-}
+
 /* greeting */
 .greeting-container {
     display: grid;
@@ -345,7 +405,7 @@ footer {
     grid-template-rows: 1fr;
     align-items: center;
     width: 100%;
-    max-width: 1000px;
+    max-width: 800px;
 }
 .greeting {
     margin: 0 auto;
@@ -372,9 +432,56 @@ footer {
 }
 
 /* todo */
-
+#todo-today-list {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+}
+#todo-today-list input {
+    width: 15px;
+    margin-right: 30px;
+    cursor: pointer;
+    justify-self: flex-end;
+}
+#today-checkbox:hover {
+    transform: scale(1.2);
+    transition: all 0.2s ease-in-out;
+}
+#today-button:hover {
+    transform: scale(1.2);
+    transition: all 0.2s ease-in-out;
+}
+#todo-today-list button {
+    width: 30px;
+    margin-left: 30px;
+    border: none;
+    background: none;
+    filter: invert(1);
+    justify-self: flex-start;
+}
+#list-item-text {
+    background-color: transparent;
+        border: none;
+        color: white;
+        font-family: inherit;
+        font-size: inherit;
+        resize: none;
+        overflow: hidden;
+        width: auto;
+        height: 100%;
+        padding: 0;
+        margin: 0;
+        outline: none;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        line-height: 70px;
+}
+button img {
+    cursor: pointer;
+}
 #today {
-    padding-top: 2rem;
+    padding-top: 1rem;
     font-size: 1.3rem;
     font-weight: var(--fw-regular);
     font-family: var(--ff-secondary);
@@ -385,8 +492,7 @@ footer {
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding-top: 1rem;
-    width: 100%;
+    width: auto;
 }
 .todo-form {
     font-size: 2.5rem;
@@ -395,15 +501,6 @@ footer {
 #todo-input {
     font-size: var(--fs-700);
     width: 100%;
-}
-@media (max-width: 757px) {
-    .todo-main-container {
-        padding-top: 1rem;
-        padding-bottom: 2rem;
-    }
-    .todo-form {
-        font-size: 2rem;
-    }
 }
 .checkbox-form {
     width: auto;
@@ -417,7 +514,6 @@ footer {
     text-align: center;
 }
 .checkbox-form input[type="checkbox"] {
-    margin-right: 0.5rem;
     grid-column: 1;
     width: 20px;
     cursor: pointer;
@@ -425,7 +521,10 @@ footer {
 .cb-form-container {
     width: 80%;
 }
-
+#checkbox-label {
+    padding-right: 1em;
+    padding-left: 1em;
+}
 #todo-edit {
     width: auto;
     border: none;
@@ -439,22 +538,9 @@ footer {
     filter: invert(1);
 }
 
-/* quotes */
-.blockquote {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    text-align: center;
-    font-size: .8rem;
-    opacity: .7;
-}
 
-@media (max-width: 450px) {
-    cite {
-        display: none;
-    }
-}
+
+
 
 /* button */
 .button {
@@ -487,18 +573,15 @@ footer {
 /* top-region */
 .top-region {
     display: block;
-    height: auto;
+    min-height: 200px;
 }
 
 /* widget */
 .widget-container {
-    position: absolute;
-    bottom: 0;
-    right: 15px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    width: 320px;
+    width: 325px;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
 }
 .widget-header {
     padding-top: 5px;
@@ -527,8 +610,9 @@ footer {
 }
 .main-widget {
     border: none;
-    bottom: 25px;
-    position: absolute;
+    bottom: 45px;
+    right: 25px; 
+    position: fixed;
     border-radius: 10px;
     background-color: rgba(0, 0, 0, 0.9);
     align-items: center;
@@ -536,7 +620,7 @@ footer {
     flex-direction: column;
     height: auto;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-    width: 100%;
+    width: 340px;
 }
 .widget-body-1 {
     flex-direction: column;
@@ -564,20 +648,6 @@ footer {
     font-size: inherit;
     font-family: inherit;
     cursor: pointer;
-}
-.widget-button {
-    padding: 5px;
-    align-self: flex-end;
-    width: 50px;
-    border: none;
-    color: white;
-    background: none;
-    cursor: pointer;
-    opacity: .5;
-}
-.widget-button:hover {
-    opacity: 100%;
-    transition: opacity .2s ease-in-out;
 }
 .hidden {
     display: none;
@@ -710,6 +780,10 @@ footer {
 /* utility classes */
 .muted {
     opacity: 40%;
+}
+.left-region-footer {
+    display: block;
+    width: 20%;
 }
 .editable {
     width: 25ch;
